# python_collection_views

./: README.md  pyproject.toml
.github/workflows/: distribute.yml  main.yml
codetools/: fix_all.sh
codetools/black/: check.sh  fix.sh
codetools/darglint/: check.sh
codetools/isort/: check.sh  fix.sh
codetools/mypy/: check.sh
codetools/pydocstyle/: check.sh
codetools/pyflakes/: check.sh
codetools/sort_all/: fix.sh
collection_views/: __init__.py  immutable_view_list.py
tests/: test_immutable_view_list.py
