[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "collection-views"
version = "0.0.1"
description = "Mutable and immutable views over standard collections with proper type annotations."
readme = "README.md"
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/surgura/collection_views"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
packages = [{ include = "collection_views" }]

[tool.poetry.dependencies]
python = "^3.8"
# Optional development dependencies.
black = { version = "22.6.0", optional = true }
darglint = { version = "1.8.1", optional = true }
isort = { version = "5.10.1", optional = true }
mypy = { version = "1.5.1", optional = true }
pydocstyle = { version = "6.1.1", optional = true }
toml = { version = "0.10.2", optional = true }
pyflakes = { version = "2.4.0", optional = true }
sort-all = { version = "1.2.0", optional = true }
pytest = { version = "7.4.2", optional = true }

[tool.poetry.extras]
dev = [
    "black",
    "darglint",
    "isort",
    "mypy",
    "pydocstyle",
    "toml",
    "pyflakes",
    "sort",
    "pytest",
]
